--- a/src/main/resources/templates/update-pharmacy.html
+++ b/src/main/resources/templates/update-pharmacy.html
@@ -79,7 +79,7 @@
 <div class="container">
     <h2 style="margin-top: 15px; text-align: center;color:blueviolet">New Pharmacy Information::</h2>
 
-    <form th:action="@{/add-pharmacy}" th:object="${pharmacy}" method="post" class="was-validated" style="color: blue">
+    <form th:action="@{/update-pharmacy}" th:object="${pharmacy}" method="post" class="was-validated" style="color: blue">
 
 
         <div class="form-group">
