--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Home </title>
+    <title>About </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -34,7 +34,7 @@
                 </a>
                 <ul class="dropdown-menu">
                     <li><a href="/profile">Profile</a></li>
-                    <li><a href="/profile/settings">Settings</a></li>
+                    <li><a href="/profile_settings">Settings</a></li>
                     <li><a href="/logout">Log Out</a></li>
                 </ul>
             </li>
@@ -43,28 +43,14 @@
     </div>
 </nav>
 
-<div class="container">
-     <div class="content">
-        <center>
-            <h1 style="color: fuchsia"><b>Welcome to Online Medicine Shop</b></h1>
+<div style="margin: 10px">
 
-        </center>
-    </div>
-    <div class="content">
-        <center>
-            <img src="123.jpg" alt="Italian Trulli">
-            <img src="123.jpg" alt="Italian Trulli">
 
-        </center>
-    </div>
-    <div class="content">
-        <center>
-            <img src="123.jpg" alt="Italian Trulli">
+    <h4 style="color: dimgray" > this is a web based online medicine shop. people who can use this application, they can request to medicine shopkeeper for desired medicine. The medicine shopkeeper can arrive medicine to specifique consumers. A consumer are able to take the medicine.
+    </h4>
 
-        </center>
-    </div>
 </div>
-
 </body>
 </html>
+
 
