--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Home </title>
+    <title>Login </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -27,44 +26,35 @@
             <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
-        <ul sec:authorize="isAuthenticated()" class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                    <span class="glyphicon glyphicon-user"  sec:authentication="name"></span>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a href="/profile">Profile</a></li>
-                    <li><a href="/profile/settings">Settings</a></li>
-                    <li><a href="/logout">Log Out</a></li>
-                </ul>
-            </li>
-        </ul>
 
     </div>
 </nav>
 
-<div class="container">
-     <div class="content">
-        <center>
-            <h1 style="color: fuchsia"><b>Welcome to Online Medicine Shop</b></h1>
 
-        </center>
-    </div>
-    <div class="content">
-        <center>
-            <img src="123.jpg" alt="Italian Trulli">
-            <img src="123.jpg" alt="Italian Trulli">
+<div class="signup-form">
+    <form action="/login" method="post" class="form-horizontal">
+        <div class="col-xs-8 col-xs-offset-4">
+            <h2 style="color: rebeccapurple">Login</h2>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-xs-4">Username</label>
+            <div class="col-xs-8">
+                <input type="text" class="form-control" name="username" required>
+            </div>
+        </div>
 
-        </center>
-    </div>
-    <div class="content">
-        <center>
-            <img src="123.jpg" alt="Italian Trulli">
-
-        </center>
-    </div>
+        <div class="form-group">
+            <label class="control-label col-xs-4">Password</label>
+            <div class="col-xs-8">
+                <input type="password" class="form-control" name="password"  required>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-xs-8 col-xs-offset-4">
+                <button type="submit" class="btn btn-primary btn-lg">Login</button>
+            </div>
+        </div>
+    </form>
 </div>
-
 </body>
 </html>
-
