--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Home </title>
+    <title>Profile </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -43,28 +43,47 @@
     </div>
 </nav>
 
-<div class="container">
-     <div class="content">
-        <center>
-            <h1 style="color: fuchsia"><b>Welcome to Online Medicine Shop</b></h1>
-
-        </center>
+<div class="signup-form" style="color: mediumvioletred; 'Audiowide', sans-serif;font-size: 30px">
+    <div class="col-xs-8 col-xs-offset-4">
+        <h2>Profile Info:</h2>
     </div>
-    <div class="content">
-        <center>
-            <img src="123.jpg" alt="Italian Trulli">
-            <img src="123.jpg" alt="Italian Trulli">
-
-        </center>
+    <div class="form-group">
+        <label class="control-label col-xs-4">Name</label>
+        <div class="col-xs-8">
+            <h6>[[${user_info.firstname}]] [[${user_info.lastname}]]</h6>
+        </div>
     </div>
-    <div class="content">
-        <center>
-            <img src="123.jpg" alt="Italian Trulli">
+    <div class="form-group">
+        <label class="control-label col-xs-4">UserName</label>
+        <div class="col-xs-8">
+            <h6>[[${user_info.username}]]</h6>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-4">Email Address</label>
+        <div class="col-xs-8">
+            <h6>[[${user_info.email}]]</h6>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-4">Phone Number</label>
+        <div class="col-xs-8">
+            <h6>[[${user_info.phone}]]</h6>
+        </div>
+    </div>
 
-        </center>
+    <div class="form-group">
+        <label class="control-label col-xs-4">Address</label>
+        <div class="col-xs-8">
+            <h6>[[${user_info.address}]]</h6>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-4">Role</label>
+        <div class="col-xs-8">
+            <h6>[[${user_info.role}]]</h6>
+        </div>
     </div>
 </div>
-
 </body>
 </html>
-
