--- a/src/main/resources/templates/admin-home.html
+++ b/src/main/resources/templates/admin-home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Admin Home</title>
+    <title>Google Pharmacy Map</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -9,42 +9,29 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="login.css">
+    <style>
+        #map{
+            height: 400px;
+            weight: 100%;
+        }
+    </style>
 </head>
 <body>
-
 <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-
+    <div style="font-size: 14px;font-family: Garamond" class="container-fluid">
         <div class="navbar-header">
-            <a style="color: azure;font-size: 30px" class="navbar-brand" href="/"><b><em>Medicine Shop </em></b>       </a>
+            <a style="color: azure;font-size: 30px" class="navbar-brand" href="/"><b><em>Pharmacy Locator System </em></b>       </a>
         </div>
-
         <ul class="nav navbar-nav">
-            <li class="active"><a href="/admin">Home</a></li>
-            <li ><a href="/add-new-medicine">Add New Medicine</a></li>
-
-            <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Medicine Storage
-                    <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a href="/medicine-category">Medicine Category</a></li>
-                    <li><a href="/medicine-storage">All Medicine</a></li>
-                </ul>
-            </li>
-            <li ><a href="/consumerslist">Consumers List</a></li>
-
-            <li><a href="/consumers-request">Consumers Request</a></li>
-            <li  class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Ordered Medicine
-                    <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li ><a href="/medicine-order-list">Ordered list </a></li>
-                    <li><a href="/medicine-order">New Order</a></li>
-                </ul>
-            </li>
-
+            <li ><a href="#">Home</a></li>
+            <li ><a href="/google-pharmacy-map">Google Pharmacy Map</a></li>
+            <li ><a href="/add-pharmacy">Add New Pharmacy</a></li>
+           <li ><a href="/pharmacy-list">Pharmacy List</a></li>
         </ul>
-
+        <ul sec:authorize="!isAuthenticated()" class="nav navbar-nav navbar-right">
+            <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        </ul>
         <ul sec:authorize="isAuthenticated()" class="nav navbar-nav navbar-right">
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -57,32 +44,24 @@
                 </ul>
             </li>
         </ul>
-
-
     </div>
 </nav>
-<div class="content">
-    <center>
-        <h1 style="color: fuchsia"><b>Welcome to Online Medicine Shop</b></h1>
 
-    </center>
-</div>
 
-<div class="container">
-    <img src="library.jpg" alt="Notebook" style="width: 100%;height: 90%">
-    <div class="content">
-        <center>
-            <img src="123.jpg" alt="Italian Trulli">
-            <img src="123.jpg" alt="Italian Trulli">
+<div id="googleMap" style="width:100%;height:400px;"></div>
 
-        </center>
-    </div>
-    <div class="content">
-        <center>
-            <img src="123.jpg" alt="Italian Trulli">
+<script>
+    function myMap() {
+        var mapProp= {
+            center:new google.maps.LatLng(24.00,90.00),
+            zoom:4,
+        };
+        var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+    }
+</script>
 
-        </center>
-    </div>
-</div>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgh0BMZzbPkiwq8r0REUiCs1fUHDv6k9E&callback=myMap"></script>
+
 </body>
 </html>
+
