--- a/src/main/resources/templates/pharmacy-in-google-map.html
+++ b/src/main/resources/templates/pharmacy-in-google-map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Basic Map Types</title>
+    <title>Google Pharmacy Map</title>
     <meta name="viewpoint" content="width-device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <style>
@@ -12,6 +12,39 @@
     </style>
 </head>
 <body>
+
+
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a style="color: azure;font-size: 30px" class="navbar-brand" href="/"><b><em>Pharmacy Locator System </em></b>       </a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li ><a href="/">Home</a></li>
+            <li ><a href="/pharmacy-map">Pharmacy Map</a></li>
+            <li ><a href="/my-location">My Location</a></li>
+            <li ><a href="/nearest-pharmacy">Nearest Pharmacy</a></li>
+            <li><a href="/about">About</a></li>
+        </ul>
+        <ul sec:authorize="!isAuthenticated()" class="nav navbar-nav navbar-right">
+            <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        </ul>
+        <ul sec:authorize="isAuthenticated()" class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <span class="glyphicon glyphicon-user"  sec:authentication="name"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="/profile">Profile</a></li>
+                    <li><a href="/profile/settings">Settings</a></li>
+                    <li><a href="/logout">Log Out</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 <h1> Google Map </h1>
 <div id="map"></div>
 
@@ -40,14 +73,26 @@
             center:{lat:24.00,lng:90.000}
         }
         var map =new google.maps.Map(document.getElementById('map'),options);
-        for(i=0;i<array.length;i++) {
-            addMarker({coords: {lat: array[i].lat, lng:array[i].lng}, content:array[i].address});
+        addMarker({coords: {lat:24.90, lng:91.00}, content:'My Location',
+            iconBase:
+                "http://maps.google.com/mapfiles/kml/suffle/man.png"}
+        );
+
+        
+        for(i=0;i<array.length;i++)
+        {
+            addMarker({coords: {lat: array[i].lat, lng:array[i].lng}, content:array[i].address,
+            iconBase:
+                "http://maps.google.com/mapfiles/kml/paddle/P.png"}
+                     );
+
         }
 
         function addMarker(props) {
             var marker = new google.maps.Marker({
                 position: props.coords,
-                map: map
+                map: map,
+                icon:props.iconBase
             });
             if (props.content) {
                 var infoWindow = new google.maps.InfoWindow({
