--- a/src/main/resources/templates/profile_settings.html
+++ b/src/main/resources/templates/profile_settings.html
@@ -13,21 +13,35 @@
 <body>
 
 <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
+    <div style="font-size: 14px;font-family: Garamond" class="container-fluid">
         <div class="navbar-header">
-            <a style="color: azure;font-size: 30px" class="navbar-brand" href="/"><b><em>Medicine Shop </em></b>       </a>
+            <a style="color: azure;font-size: 30px" class="navbar-brand" href="/"><b><em>Pharmacy Locator System </em></b>       </a>
         </div>
         <ul class="nav navbar-nav">
             <li ><a href="/">Home</a></li>
-            <li><a href="/admin"><i class="fa fa-home"></i>Admin</a></li>
-            <li><a href="/consumer">Consumer</a></li>
+            <li ><a href="/pharmacy-map">Pharmacy Map</a></li>
+            <li ><a href="/my-location">My Location</a></li>
+            <li ><a href="/nearest-pharmacy">Nearest Pharmacy</a></li>
+			<li ><a href="/all-pharmacy-distance">All Pharmacy</a></li>
+			
             <li><a href="/about">About</a></li>
         </ul>
         <ul sec:authorize="!isAuthenticated()" class="nav navbar-nav navbar-right">
             <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
-
+        <ul sec:authorize="isAuthenticated()" class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <span class="glyphicon glyphicon-user"  sec:authentication="name"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="/profile">Profile</a></li>
+                    <li><a href="/profile/settings">Settings</a></li>
+                    <li><a href="/logout">Log Out</a></li>
+                </ul>
+            </li>
+        </ul>
     </div>
 </nav>
 
@@ -39,28 +53,14 @@
         </a>
         </div>
         <div class="col-xs-8 col-xs-offset-4">
-            <h2 style="color: rebeccapurple">Profile Settings</h2>
+            <h2 style="color: rebeccapurple">Update Profile</h2>
 
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-xs-4">First Name</label>
-            <div class="col-xs-8">
-                <input type="text" class="form-control" name="firstname" th:value="${user.firstname}" required="required" >
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-xs-4">Last Name</label>
-            <div class="col-xs-8">
-                <input type="text" class="form-control" name="lastname" th:value="${user.lastname}" required="required" >
-            </div>
         </div>
 
         <div class="form-group">
             <label class="control-label col-xs-4">UserName</label>
             <div class="col-xs-8">
-                <input type="text" class="form-control" name="username" th:value="${user.username}" required="required" >
+                <input type="text" class="form-control" name="username" th:value="${user.username}" required="required" disabled>
             </div>
         </div>
 
@@ -70,12 +70,7 @@
                 <input type="email" class="form-control" name="email" th:value="${user.email}" required="required" >
             </div>
         </div>
-        <div class="form-group">
-            <label class="control-label col-xs-4">Phone Number</label>
-            <div class="col-xs-8">
-                <input type="tel" class="form-control" name="phone"placeholder="+8801" th:value="${user.phone}" required>
-            </div>
-        </div>
+
         <div class="form-group">
             <label class="control-label col-xs-4">Address</label>
             <div class="col-xs-8">
@@ -98,11 +93,12 @@
         <input type="hidden" name="role" th:value="${user.role}">
         <div class="form-group">
             <div class="col-xs-8 col-xs-offset-4">
-                <p><label class="checkbox-inline"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a>.</label></p>
-                <button type="submit" class="btn btn-primary btn-lg">Update</button>
+                <button type="submit" class="btn btn-success btn-lg">Update Profile</button>
             </div>
+
         </div>
     </form>
-</div>
+
+    </div>
 </body>
 </html>
