--- a/src/main/resources/templates/google-pharmacy-map.html
+++ b/src/main/resources/templates/google-pharmacy-map.html
@@ -57,10 +57,10 @@
     var array=[];
     var list=/*[[${list}]]*/"f";
     /*]]>*/
-    document.write(list.length);
-    for(i=0;i<list.length;i++)
-    {
-        const obj = {lat:list[i].latitude, lng:list[i].longitude, name:list[i].pName,address:list[i].address};
+    document.write(""+list.length);
+    for (const i in list) {
+
+        const obj = {lat:list[i].latitude, lng:list[i].longitude, name:list[i].name,address:list[i].address};
         array.push(obj);
     }
 
@@ -82,8 +82,7 @@
         // );
         //
         //
-        for(i=0;i<array.length;i++)
-        {
+        for (const i in array) {
             addMarker({coords: {lat: array[i].lat, lng:array[i].lng}, content:array[i].address,
             iconBase:
                 "http://maps.google.com/mapfiles/kml/paddle/P.png"}
