--- a/src/main/resources/templates/pharmacy-in-google-map.html
+++ b/src/main/resources/templates/pharmacy-in-google-map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <title>Google Pharmacy Map</title>
     <meta name="viewpoint" content="width-device-width,initial-scale=1.0">
