--- a/src/main/resources/templates/profile_settings.html
+++ b/src/main/resources/templates/profile_settings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Profile Settings </title>
+    <title>Update Profile </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -22,8 +22,8 @@
             <li ><a href="/pharmacy-map">Pharmacy Map</a></li>
             <li ><a href="/my-location">My Location</a></li>
             <li ><a href="/nearest-pharmacy">Nearest Pharmacy</a></li>
-			<li ><a href="/all-pharmacy-distance">All Pharmacy</a></li>
-			
+            <li ><a href="/all-pharmacy-distance">All Pharmacy</a></li>
+
             <li><a href="/about">About</a></li>
         </ul>
         <ul sec:authorize="!isAuthenticated()" class="nav navbar-nav navbar-right">
@@ -45,59 +45,58 @@
     </div>
 </nav>
 
-
 <div class="signup-form">
-    <form action="/profile-update" th:object="${user}" method="post" class="form-horizontal">
-        <div> <a th:if="${message} != null">
-            <script> window.alert('[[${message}]]')</script>
-        </a>
-        </div>
-        <div class="col-xs-8 col-xs-offset-4">
-            <h2 style="color: rebeccapurple">Update Profile</h2>
-
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-xs-4">UserName</label>
-            <div class="col-xs-8">
-                <input type="text" class="form-control" name="username" th:value="${user.username}" required="required" disabled>
+        <form action="/update-profile" th:object="${user}" method="post" class="form-horizontal">
+            <div> <a th:if="${message} != null">
+                <script> window.alert('[[${message}]]')</script>
+            </a>
             </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-xs-4">Email Address</label>
-            <div class="col-xs-8">
-                <input type="email" class="form-control" name="email" th:value="${user.email}" required="required" >
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-xs-4">Address</label>
-            <div class="col-xs-8">
-                <input type="text" class="form-control" name="address" th:value="${user.address}" required>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-xs-4">Password</label>
-            <div class="col-xs-8">
-                <input type="password" class="form-control" name="password" th:value="${user.password}" required>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-xs-4">Confirm Password</label>
-            <div class="col-xs-8">
-                <input type="Password" class="form-control" name="confirmPassword" th:value="${user.confirmPassword}" required >
-            </div>
-        </div>
-        <input type="hidden" name="role" th:value="${user.role}">
-        <div class="form-group">
             <div class="col-xs-8 col-xs-offset-4">
-                <button type="submit" class="btn btn-success btn-lg">Update Profile</button>
+                <h2 style="color: rebeccapurple">Profile Update</h2>
+
             </div>
 
-        </div>
-    </form>
+            <div class="form-group">
+                <label class="control-label col-xs-4">UserName</label>
+                <div class="col-xs-8">
+                    <input type="text" class="form-control" name="username" th:value="${user.username}" required="required" >
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-xs-4">Email Address</label>
+                <div class="col-xs-8">
+                    <input type="email" class="form-control" name="email" th:value="${user.email}" required="required" >
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-xs-4">Address</label>
+                <div class="col-xs-8">
+                    <input type="text" class="form-control" name="address" th:value="${user.address}" required>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label col-xs-4">Password</label>
+                <div class="col-xs-8">
+                    <input type="password" class="form-control" name="password" th:value="${user.password}" required>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-xs-4">Confirm Password</label>
+                <div class="col-xs-8">
+                    <input type="Password" class="form-control" name="confirmPassword" th:value="${user.confirmPassword}" required >
+                </div>
+            </div>
+            <input type="hidden" name="role" th:value="${user.role}">
+            <div class="form-group">
+                <div class="col-xs-8 col-xs-offset-4">
+                    <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
+                </div>
+            </div>
+        </form>
+        <div class="text-center"><b style="color: fuchsia">Already have an account?</b><a style="color: blue" href="/login">Login here</a></div>
 
     </div>
 </body>
