--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -49,7 +49,7 @@
         <h2>Profile Information:</h2>
     </div>
 
-    <div class="form-group">
+    <div style="font-family: Garamond;font-size: 25px" class="form-group">
         <label class="control-label col-xs-4">UserName</label>
         <div class="col-xs-8">
             <h6>[[${user_info.username}]]</h6>
